# mcp-docs

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/mcp_docs/: __init__.py  app.py  models.py  server.py  settings.py  singletons.py
src/mcp_docs/extraction/: __init__.py  extractor.py  markitdown_extractor.py  notebook.py  ocr.py  office.py  pdf.py  text.py  vision_client.py
src/mcp_docs/indexing/: __init__.py  chunker.py  indexer.py
src/mcp_docs/integration/: __init__.py  hash_api.py
src/mcp_docs/processing/: __init__.py  queue.py
src/mcp_docs/scanning/: __init__.py  scanner.py
src/mcp_docs/search/: __init__.py  engine.py
src/mcp_docs/storage/: __init__.py  database.py
src/mcp_docs/tools/: __init__.py  _validation.py  documents.py  filesystem.py  glossary.py  hashes.py  indexing.py  processing.py  roots.py  search.py
tests/: __init__.py  conftest.py  test_doc_type_validation.py  test_extraction.py  test_extraction_errors.py  test_filesystem.py  test_glossary_tools.py  test_incremental_indexing.py  test_indexing.py  test_integration.py  test_ocr_all_failed.py  test_processing.py  test_scanning.py  test_search.py  test_server.py  test_storage.py  test_vector_core_dependency.py  test_vision_ocr_null.py
