[project]
name = "mcp-docs"
version = "0.1.0"
description = "MCP server for document management with vector search"
readme = "README.md"
authors = [
    { name = "michaelkrauty", email = "michaelkrauty@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp~=1.25.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "vector-core",
    # Extraction dependencies
    "pypdf~=5.0",
    "python-docx~=1.0",
    "python-pptx~=1.0",
]

[project.optional-dependencies]
ocr = [
    "pdf2image~=1.16",
    "Pillow~=10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.100.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-docs = "mcp_docs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_docs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
vector-core = { path = "../vector-core", editable = true }

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PL"]
ignore = ["PLR0913", "PLR2004"]
